PDFBOX-5660: use isBlank()
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1924728 13f79535-47bb-0310-9956-ffa450edef68